--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,23 +5,24 @@ requires      = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "scandeavour"
+name = "netdeavour"
 version = "1.3.2"
-description = "Dashboard for merging, visualising and filtering network scans"
+description = "Dashboard for merging, visualising and filtering network scans with multi-user support"
 readme = "README.md"
-authors = [{ name = "cr4ckc4t", email = "cr4ckc4t@github.com" }]
+authors = [{ name = "SweetFrost25", email = "sweetfrost25@github.com" }]
 license-files = ["LICENSE"]
 classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
 ]
-keywords = ["nmap", "nessus", "dashboard"]
+keywords = ["nmap", "nessus", "dashboard", "network", "scanning"]
 dependencies = [
     'dash >= 2.18.1',
     'dash[diskcache]',
     'dash-bootstrap-components >= 1.6.0',
     'dash_ag_grid >= 31.2.0',
     'dash_cytoscape >= 1.0.2',
+    'werkzeug >= 3.0.0',
 ]
 requires-python = ">=3.12"
 
@@ -29,10 +30,10 @@ requires-python = ">=3.12"
 dev = ['bumpver']
 
 [project.urls]
-Homepage = "https://github.com/Cr4ckC4t/scandeavour"
+Homepage = "https://github.com/SweetFrost25/NetDeavour"
 
 [project.scripts]
-scandeavour = "scandeavour.__main__:main"
+netdeavour = "netdeavour.__main__:main"
 
 [tool.bumpver]
 current_version = "1.3.2"
@@ -49,7 +50,7 @@ push = false
     '^version = "{version}"',
     '^current_version = "{version}"',
 ]
-"src/scandeavour/__main__.py" = [
+"src/netdeavour/__main__.py" = [
     '__version__ = "{version}"',
 ]
 
